# tsmc-quick-parking

./: README.md
.github/workflows/: backend.yml  backend_delivery.yml  ci.yml  frontend_delivery.yaml  frontend_lint.yml  pylint.yml
backend/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  clear_records.sh  docker-compose.yml  init_db.sh  pyproject.toml
backend/docker/app/: Dockerfile.app
backend/docker/db/: clear_records.sql  init.sql  sample.sql
backend/src/: auth.py  constants.py  create_occupants.py  create_records.py  database.py  main.py  security.py
backend/src/dashboard/: router.py
backend/src/parking/: constants.py  router.py
backend/src/parkinglots/: constants.py  router.py  utils.py
backend/src/spaces/: constants.py  router.py
backend/src/user/: router.py
backend/src/users/: constants.py  router.py  utils.py
backend/src/vehicles/: constants.py  router.py
backend/tests/users/: test_router.py
frontend/: .dockerignore  .eslintrc.js  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
frontend/nginx/: nginx.conf
frontend/src/: authConfig.ts  constants.ts  hooks.ts  index.tsx  reportWebVitals.ts
frontend/src/components/: DataDisplay.tsx  FormLabel.tsx  LogOutButton.tsx  LoginButton.tsx  NavigationBar.tsx  PageLayout.tsx  ParkingLot.tsx  TokenRefresh.tsx  UserLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  DashboardRouter.tsx  Home.tsx  ParkingLotList.tsx  ParkingLotPage.tsx  Setting.tsx  Vehicle.tsx
frontend/src/utils/: api.ts  claimUtils.ts
(+9 files in other folders)
